# flashplayer

./: .gitignore  README.md  askey.jks  build.gradle  local.properties
apkUnshell-new/: README.md
apkUnshell-new/app/: CMakeLists.txt  build.gradle
apkUnshell-new/app/src/main/: AndroidManifest.xml
apkUnshell-new/app/src/main/res/layout/: activity_cameraphoto.xml  activity_googleservice.xml
apkUnshell-new/app/src/main/res/values/: styles.xml
apkUnshell/app/: CMakeLists.txt  build.gradle
apkUnshell/app/src/main/: AndroidManifest.xml
apkUnshell/app/src/main/cpp/: PhoneRunning.cpp  PhoneRunning.h
apkUnshell/app/src/main/java/com/apkUnshell/: MainActivity.java
apkUnshell/app/src/main/res/layout/: activity_camera2.xml  activity_main.xml
apkUnshell/app/src/main/res/xml/: account_authenticator.xml
apkshell/: .project
apkshell-cmd/: apkUnshell.apk  app-release.apk  run.bat
apkshell-cmd/autosign/: 安下载帮助.htm
apkshell/src/com/apkshell/: ApkShell.java  Utils.java  ZipUtils.java
app/: CMakeLists.txt  build.gradle  index.html  proguard-rules.pro
app/debug/: app-debug.apk
app/release/: app-release.apk  test.apk
app/src/main/: AndroidManifest.xml  index.html
app/src/main/cpp/: PhoneRunning.cpp  Utils.cpp  Utils.h
app/src/main/res/layout/: activity_cameraphoto.xml  activity_screenguard.xml  activity_screensnapshot.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: accessibilityservice_config.xml  devicemanager_config.xml
gradle/wrapper/: gradle-wrapper.properties
release/: app-release.apk
(+93 files in other folders)
